--- a/advanced_api_project/requirements.txt
+++ b/advanced_api_project/requirements.txt
@@ -1,14 +1,3 @@
-asgiref==3.9.1
-Django==5.2.5
-django-csp==4.0
-django-filter==25.1
-django-taggit==6.1.0
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-mysql-connector-python==9.4.0
-mysqlclient==2.2.7
-packaging==25.0
-pillow==11.3.0
-PyJWT==2.10.1
-sqlparse==0.5.3
-tzdata==2025.2
+django\ndjangorestframework
+django
+djangorestframework
